bug fixing : greater text area with same size as large of the text / blue scrollbar / when u replace logo, it's deleted from upload folder

--- a/src/index.css
+++ b/src/index.css
@@ -138,14 +138,14 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background: theme("colors.red.600");
+    background: theme("colors.blue.900");
     border-radius: 8px;
     border: 2px solid transparent;
     background-clip: content-box;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: theme("colors.red.500");
+    background: theme("colors.blue.800");
     border: 2px solid transparent;
     background-clip: content-box;
   }
@@ -153,6 +153,6 @@
   /* Pour Firefox */
   * {
     scrollbar-width: thin;
-    scrollbar-color: theme("colors.red.600") transparent;
+    scrollbar-color: theme("colors.blue.900") transparent;
   }
 }
